# hexlet_pytest

./: .gitignore  README.md  pyproject.toml  stack.py
tests/: test_example.py  test_stack.py
